package strategy;

import Site.Site;

public interface Strategy {

    public double calculate(Site site);

}
